--- a/blogs/index.html
+++ b/blogs/index.html
@@ -167,9 +167,9 @@
   <div class="page-wrapper">
     <nav id="sidebar">
       <h3>✶ Menu ✶</h3>
-      <a href="index.html">Home</a>
-      <a href="portfolio/">Portfolio</a>
-      <a href="projects/">Organisations/Projects</a>
+      <a href="https://friendlycritter.art/">Home</a>
+      <a href="/portfolio/">Portfolio</a>
+      <a href="/projects/">Organisations/Projects</a>
       <a href="/blogs/">Blog</a>
 
       <div class="update-board">
