--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -220,9 +220,9 @@ header {
   <nav id="sidebar">
     <h3>Navigation</h3>
     <a href="../">Home</a>
-    <a href="portfolio/">Portfolio</a>
-    <a href="projects/">Organisations/Projects</a>
-    <a href="blog/">Blog</a>
+    <a href="/portfolio/">Portfolio</a>
+    <a href="/projects/">Organisations/Projects</a>
+    <a href="/blogs/">Blog</a>
 
     <div class="update-board">
       <h4>Website Update Board</h4>
