--- a/projects/index.html
+++ b/projects/index.html
@@ -218,7 +218,7 @@
       </header>
 
       <div class="project">
-        <img src="images/static.png" alt="STATIC">
+        <img src="/images/static.png" alt="STATIC">
         <div class="project-content">
           <h2>STATIC (@CUT2STATIC)</h2>
           <p>
@@ -236,7 +236,7 @@
       </div>
 
       <div class="project">
-        <img src="images/seventhchapter.jpg" alt="seventhchapter">
+        <img src="/images/seventhchapter.jpg" alt="seventhchapter">
         <div class="project-content">
           <h2>SEVENTHCHAPTER (@SEVENTHCHAPTER.WORLD)</h2>
           <p>
@@ -251,7 +251,7 @@
       <div class="separator">OTHER</div>
 
       <div class="project">
-        <img src="images/artistsagainstgenocide.png" alt="artistsagainstgenocide">
+        <img src="/images/artistsagainstgenocide.png" alt="artistsagainstgenocide">
         <div class="project-content">
           <h2>Artists Against Genocide (@artistsagainstg3nocide)</h2>
           <p>
