--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
       <div class="update-board">
         <h4>Website Update Board</h4>
-        <p><b>Nov 2025:</b> Added sidebar + floating glass design 💫</p>
+        <p><b>Nov 2025:</b> The Renaissance of this website. Added everything. Wow....</p>
       </div>
     </nav>
 
