--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -226,7 +226,7 @@ header {
 
     <div class="update-board">
       <h4>Website Update Board</h4>
-      <p><b>Nov 2025:</b> Added glass sidebar + unified layout ✦</p>
+      <p><b>Nov 2025:</b> The Renaissance of this website. Added everything. Wow....</p>
     </div>
   </nav>
 
