--- a/projects/index.html
+++ b/projects/index.html
@@ -208,7 +208,7 @@
 
       <div class="update-board">
         <h4>Website Update Board</h4>
-        <p><b>Nov 2025:</b> Added Organisations/Projects page 💫</p>
+        <p><b>Nov 2025:</b> The Renaissance of this website. Added everything. Wow....</p>
       </div>
     </nav>
 
