--- a/projects/index.html
+++ b/projects/index.html
@@ -248,6 +248,18 @@
         </div>
       </div>
 
+      <div class="project">
+        <img src="/images/ualcc.webp" alt="ual">
+        <div class="project-content">
+          <h2>University of the Arts London (@unioftheartslondon)</h2>
+          <p>
+            I am currently studying at the <b>University of the arts London</b>, specifically in their <b>London College of Communications</b> 
+            branch! I am a 2nd year student, studying Computer Animation and Visual Effects. In my time there, I have worked on animations, storyboards,
+            documentaries, short films, among many other things! You can find some of this work in the portfolio section of my website <a href="/porfolio/"> here! </a>
+          </p>
+        </div>
+      </div>
+
       <div class="separator">OTHER</div>
 
       <div class="project">
