--- a/projects/index.html
+++ b/projects/index.html
@@ -255,7 +255,7 @@
           <p>
             I am currently studying at the <b>University of the arts London</b>, specifically in their <b>London College of Communications</b> 
             branch! I am a 2nd year student, studying Computer Animation and Visual Effects. In my time there, I have worked on animations, storyboards,
-            documentaries, short films, among many other things! You can find some of this work in the portfolio section of my website <a href="/porfolio/"> here! </a>
+            documentaries, short films, among many other things! You can find some of this work in the portfolio section of my website <a href="/portfolio/"> here! </a>
           </p>
         </div>
       </div>
