--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -313,6 +313,13 @@ header {
       <h2>personal projects ☁︎</h2>
       <div class="video-container">
         <div class="video-item">
+          <div class="video-thumb" data-id="Jpbkw4Jb3UE">
+            <img src="https://img.youtube.com/vi/Jpbkw4Jb3UE/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+          </div>
+          <p class="video-caption">University Storyboard Project <br> Storyboarding, Acting, Colour Grading, Mixed Media, Motion Graphics, VFX, Sound Design, Compositing (Nuke, After Effects, FL Studio)</p>
+        </div>
+        
+        <div class="video-item">
           <div class="video-thumb" data-id="BtTgIKe6oH4">
             <img src="https://img.youtube.com/vi/BtTgIKe6oH4/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
           </div>
@@ -331,13 +338,6 @@ header {
             <img src="https://img.youtube.com/vi/kTOCtqsrNJg/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
           </div>
           <p class="video-caption">Ending - A Short Film by Wassim*</p>
-        </div>
-
-        <div class="video-item">
-          <div class="video-thumb" data-id="Jpbkw4Jb3UE">
-            <img src="https://img.youtube.com/vi/Jpbkw4Jb3UE/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
-          </div>
-          <p class="video-caption">University Storyboard Project</p>
         </div>
       </div>
     </div>
