--- a/projects/index.html
+++ b/projects/index.html
@@ -218,17 +218,15 @@
       </header>
 
       <div class="project">
-        <img src="/images/static.png" alt="STATIC">
+        <a href="https://www.instagram.com/cut2static/" target="_blank">
+          <img src="/images/static.png" alt="STATIC">
+        </a>
         <div class="project-content">
           <h2>STATIC (@CUT2STATIC)</h2>
           <p>
             I joined and helped found a multimedia page called <b>Static</b>, where we host music and art related events, such as online music
             festivals (referred to as URLFests), interviews (such as <a href="https://www.youtube.com/watch?v=gx5S5r3sMTo&t=5s" target="_blank"> this one!</a>), and
             cover art contests. I play a role as an Organiser, Graphic Designer, Animator and VFX Artist, producing overlays, graphics and editing livestreams.
-            <br><br>
-            <b>Social Media:</b>
-            <br>
-            <a href="https://www.instagram.com/cut2static/" target="_blank">Instagram</a>
             <br>
             <a href="https://www.youtube.com/@cut2static" target="_blank">YouTube</a>
           </p>
@@ -236,7 +234,9 @@
       </div>
 
       <div class="project">
-        <img src="/images/seventhchapter.jpg" alt="seventhchapter">
+        <a href="https://www.instagram.com/seventhchapter.world/" target="_blank">
+          <img src="/images/seventhchapter.jpg" alt="seventhchapter">
+        </a>
         <div class="project-content">
           <h2>SEVENTHCHAPTER (@SEVENTHCHAPTER.WORLD)</h2>
           <p>
@@ -249,7 +249,9 @@
       </div>
 
       <div class="project">
-        <img src="/images/ualcc.webp" alt="ual">
+        <a href="https://www.instagram.com/unioftheartslondon/" target="_blank">
+          <img src="/images/ualcc.webp" alt="ual">
+        </a>
         <div class="project-content">
           <h2>University of the Arts London (@unioftheartslondon)</h2>
           <p>
@@ -263,7 +265,9 @@
       <div class="separator">OTHER</div>
 
       <div class="project">
-        <img src="/images/artistsagainstgenocide.png" alt="artistsagainstgenocide">
+        <a href="https://www.instagram.com/artistsagainstg3nocide/" target="_blank">
+          <img src="/images/artistsagainstgenocide.png" alt="artistsagainstgenocide">
+        </a>
         <div class="project-content">
           <h2>Artists Against Genocide (@artistsagainstg3nocide)</h2>
           <p>
