--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>wassim difallah ⋆⭒˚.⋆ | Organisations / Projects</title>
+  <title>⋆⭒˚.⋆Organisations / Projects⋆.˚⭒⋆</title>
   <link rel="icon" type="image/jpg" href="images/3336a903610f1b29cd14aa89afc0f9cc.jpg">
   <style>
     body {
