--- a/projects/index.html
+++ b/projects/index.html
@@ -217,8 +217,8 @@
       <a href="/projects/">Organisations/Projects</a>
 
       <div class="update-board">
-        <h4>Website Update Board</h4>
-        <p><b>Nov 2025:</b> The Renaissance of this website. Added everything. Wow....</p>
+        <h4>Currently Working On:</h4>
+        <p><b>Nov 2025:</b> Cover Art for Kiid Spyro, Cover art for Saturnn, Music Video VFX for Bunii/NX2Photography</p>
       </div>
     </nav>
 
