--- a/projects/index.html
+++ b/projects/index.html
@@ -236,9 +236,7 @@
           <p>
             I joined and helped found a multimedia page called <b>Static</b>, where we host music and art related events, such as online music
             festivals (referred to as URLFests), interviews (such as <a href="https://www.youtube.com/watch?v=gx5S5r3sMTo&t=5s" target="_blank"> this one!</a>), and
-            cover art contests. I play a role as an Organiser, Graphic Designer, Animator and VFX Artist, producing overlays, graphics and editing livestreams.
-            <br>
-            <a href="https://www.youtube.com/@cut2static" target="_blank">YouTube</a>
+            cover art contests. I play a role as an Organiser, Graphic Designer, Animator and VFX Artist, producing overlays, graphics and editing livestreams. I also host interviews on their <a href="https://www.youtube.com/@cut2static" target="_blank">YouTube.</a>
           </p>
         </div>
       </div>
@@ -265,9 +263,9 @@
         <div class="project-content">
           <h2>University of the Arts London (@unioftheartslondon)</h2>
           <p>
-            I am currently studying at the <b>University of the arts London</b>, specifically in their <b>London College of Communications</b> 
-            branch! I am a 2nd year student, studying Computer Animation and Visual Effects. In my time there, I have worked on animations, storyboards,
-            documentaries, short films, among many other things! You can find some of this work in the portfolio section of my website <a href="https://friendlycritter.art/portfolio/"> here! </a>
+            I am currently studying at the <b>University of the Arts London</b>, specifically in their <b>London College of Communications</b> 
+            branch. I am a 2nd year student, studying Computer Animation and Visual Effects. In my time there, I have worked on animations, storyboards,
+            documentaries and short films, among many other things! You can find some of this work in the portfolio section of my website <a href="https://friendlycritter.art/portfolio/"> here! </a>
           </p>
         </div>
       </div>
