--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <h3>✶ Menu ✶</h3>
       <a href="index.html">Home</a>
       <a href="portfolio/">Portfolio</a>
-      <a href="/projects/">Blog</a>
+      <a href="/blogs/">Blog</a>
       <a href="/projects/">Organisations/Projects</a>
 
       <div class="update-board">
