--- a/blogs/index.html
+++ b/blogs/index.html
@@ -189,7 +189,7 @@
         <p>
           My week has been a literal hell so far. I've been caught up with like a billion different projects and to be honest I kinda miss having free time to just goof about LOL. <br>I recently started working at Hamleys part time as a sales assistant, and honestly it's a bunch of fun! My manager and coworkers are all really nice and kind and awesome, and I'm super grateful to finally get a job somewhere, because I feel like working retail should be a rite of passage to just learn how to interact with the rest of society. I've felt like I just stopped existing between 2020 and 2024, and this year has been all about trying to find myself again. <br>I also have been doing a bunch of commissions, and I went back to the green screen studio today :) I recently did some additional vfx work for Nx2Photography and Bunii, and I genuinely feel as though it's the best thing I've made thus far. I <b>NEED</b> this video to drop ASAP because it looks so cool and I wanna share it with the world
         </p>
-      
+      </div>
       <div class="blog-post">
         <h2>My... Introduction!</h2>
         <div class="meta">13/11/2025 [20:52]</div>
