--- a/blogs/index.html
+++ b/blogs/index.html
@@ -103,6 +103,9 @@
       box-sizing: border-box;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
       backdrop-filter: blur(10px);
+      display: flex;
+      flex-direction: column;
+      height: 90vh;
     }
 
     header {
@@ -113,6 +116,29 @@
       font-weight: bold;
       border: 1px solid #000;
       margin-bottom: 20px;
+      flex-shrink: 0;
+    }
+
+    .blog-scroll-area {
+      overflow-y: auto;
+      max-height: calc(90vh - 140px);
+      padding-right: 10px;
+      box-sizing: border-box;
+    }
+
+    .blog-scroll-area::-webkit-scrollbar {
+      width: 10px;
+    }
+    .blog-scroll-area::-webkit-scrollbar-track {
+      background: rgba(100, 130, 180, 0.3);
+      border-radius: 5px;
+    }
+    .blog-scroll-area::-webkit-scrollbar-thumb {
+      background: rgba(60, 80, 150, 0.6);
+      border-radius: 5px;
+    }
+    .blog-scroll-area::-webkit-scrollbar-thumb:hover {
+      background: rgba(60, 80, 150, 0.8);
     }
 
     .blog-post {
@@ -150,15 +176,17 @@
 
     footer {
       text-align: center;
-      margin-top: 20px;
+      margin-top: 10px;
       color: #000;
+      flex-shrink: 0;
     }
 
     @media screen and (max-width: 768px) {
       body { padding: 10px; }
       .page-wrapper { flex-direction: column; align-items: center; }
       #sidebar { width: 100%; position: static; }
-      #container { width: 100%; padding: 15px; }
+      #container { width: 100%; padding: 15px; height: auto; }
+      .blog-scroll-area { max-height: none; overflow: visible; }
     }
   </style>
 </head>
@@ -183,25 +211,32 @@
         <h1>⋆.˚⭒⋆ BLOG ⋆⭒˚.⋆</h1>
       </header>
 
-      <div class="blog-post">
-        <h2>My week has been so busy oh my god wow</h2>
-        <div class="meta">20/11/2025 [15:35]</div>
-        <p>
-          My week has been a literal hell so far. I've been caught up with like a billion different projects and to be honest I kinda miss having free time to just goof about LOL. <br>I recently started working at Hamleys part time as a sales assistant, and honestly it's a bunch of fun! My manager and coworkers are all really nice and kind and awesome, and I'm super grateful to finally get a job somewhere, because I feel like working retail should be a rite of passage to just learn how to interact with the rest of society. I've felt like I just stopped existing between 2020 and 2024, and this year has been all about trying to find myself again. <br>I also have been doing a bunch of commissions, and I went back to the green screen studio today :) I recently did some additional vfx work for Nx2Photography and Bunii, and I genuinely feel as though it's the best thing I've made thus far. I <b>NEED</b> this video to drop ASAP because it looks so cool and I wanna share it with the world
-        </p>
-      </div>
-      <div class="blog-post">
-        <h2>My... Introduction!</h2>
-        <div class="meta">13/11/2025 [20:52]</div>
-        <p>
-          Well uh hello there! I honestly do not have all that much to say right now, I'm pretty much just working on my site on the fly. I guess I should just talk about like... myself?
-          <br><br>
-          I'm <b>Wassim.</b> People also know me as Camden, Maisy, Buginsoul, Buginspirit, Wpssim, Webstargazer, Chaosxoxo (I had a lot of names.) I am a 19 year old Algerian/British guy who makes cool stuff that people seem to enjoy! I mostly work in <b>After Effects, Affinity Photo 2, Blender, Maya and Nuke</b> (although I am learning Houdini!). I also know programming, more specifically Python, HTML/CSS and a bit of GDScript (tryna learn godot rn haha). I made this website pretty much all by myself, from coding to hosting and managing DNS records on GitHub Pages and Clouflare. It was really messy (mainly because my coding is very uh not great), but luckily with the beautiful power of AI, the internet lets you automate optimising your code so now it doesnt run like poop, because there's a lot of images on this site! It's one of the only benefits of using AI i guess :D
-          <br><br>
-          Here's a silly photo of me ^w^
-          <br>
-          <img src="/images/well hello.png" alt="hi there!">
-        </p>
+      <div class="blog-scroll-area">
+
+        <div class="blog-post">
+          <h2>My week has been so busy oh my god wow</h2>
+          <div class="meta">20/11/2025 [15:35]</div>
+          <p>
+            My week has been a literal hell so far. I've been caught up with like a billion different projects and to be honest I kinda miss having free time to just goof about LOL. <br><br>
+            I recently started working at Hamleys part time as a sales assistant, and honestly it's a bunch of fun! My manager and coworkers are all really nice and kind and awesome, and I'm super grateful to finally get a job somewhere, because I feel like working retail should be a rite of passage to just learn how to interact with the rest of society. I've felt like I just stopped existing between 2020 and 2024, and this year has been all about trying to find myself again. <br><br>
+            I also have been doing a bunch of commissions, and I went back to the green screen studio today :) I recently did some additional vfx work for Nx2Photography and Bunii, and I genuinely feel as though it's the best thing I've made thus far. I <b>NEED</b> this video to drop ASAP because it looks so cool and I wanna share it with the world
+          </p>
+        </div>
+
+        <div class="blog-post">
+          <h2>My... Introduction!</h2>
+          <div class="meta">13/11/2025 [20:52]</div>
+          <p>
+            Well uh hello there! I honestly do not have all that much to say right now, I'm pretty much just working on my site on the fly. I guess I should just talk about like... myself?
+            <br><br>
+            I'm <b>Wassim.</b> People also know me as Camden, Maisy, Buginsoul, Buginspirit, Wpssim, Webstargazer, Chaosxoxo (I had a lot of names.) I am a 19 year old Algerian/British guy who makes cool stuff that people seem to enjoy! I mostly work in <b>After Effects, Affinity Photo 2, Blender, Maya and Nuke</b> (although I am learning Houdini!). I also know programming, more specifically Python, HTML/CSS and a bit of GDScript (tryna learn godot rn haha). I made this website pretty much all by myself, from coding to hosting and managing DNS records on GitHub Pages and Clouflare. It was really messy (mainly because my coding is very uh not great), but luckily with the beautiful power of AI, the internet lets you automate optimising your code so now it doesnt run like poop, because there's a lot of images on this site! It's one of the only benefits of using AI i guess :D
+            <br><br>
+            Here's a silly photo of me ^w^
+            <br>
+            <img src="/images/well hello.png" alt="hi there!">
+          </p>
+        </div>
+
       </div>
 
       <footer>&copy; friendlycritter.art</footer>
