--- a/blogs/index.html
+++ b/blogs/index.html
@@ -45,7 +45,12 @@
       color: #2f36ff;
       text-shadow: 0 0 6px rgba(74, 83, 255, 0.6);
     }
-
+    
+    #sidebar a {
+      display: block;
+      margin: 5px 0;
+      padding: 2px 0;
+}
     #sidebar {
       width: 220px;
       background: rgba(123, 155, 210, 0.65);
