--- a/projects/index.html
+++ b/projects/index.html
@@ -279,7 +279,7 @@
           <h2>Artists Against Genocide (@artistsagainstg3nocide)</h2>
           <p>
             Founder and lead creator for <b>Artists Against Genocide,</b> a non-profit focused on providing fundraising and aid to displaced families in Gaza, Sudan and Congo. 
-            I produce videos, graphics, and manage the <a href="https://www.instagram.com/artistsagainstg3nocide/" target="_blank">Instagram</a> and <a href="https://www.tiktok.com/@artistsagainst" target="_blank">Tiktok</a> to garner attention and donations for families, as well as working in tangent with Gaza Soup Kitchen, 
+            I produce videos, graphics, and manage the <a href="https://www.instagram.com/artistsagainstg3nocide/" target="_blank">Instagram</a> and <a href="https://www.tiktok.com/@artistsagainst" target="_blank">TikTok</a> to garner attention and donations for families, as well as working in tangent with Gaza Soup Kitchen, 
             Operation Olive Branch, and Project HOPE. We have raised roughly $20,000 as of November 2025.
           </p>
         </div>
