--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -238,6 +238,14 @@ header {
       <div class="video-container">
 
         <div class="video-item">
+          <div class="video-thumb" data-id="coP5-Fa01Hw">
+            <img src="https://img.youtube.com/vi/coP5-Fa01Hw/hqdefault.jpg" alt="Video Thumbnail">
+            <button></button>
+          </div>
+          <p class="video-caption">Crumbs and Traces - Documentary<br>VFX/Intro Card/Motion Graphics (DaVinci Resolve, Nuke, After Effects)</p>
+        </div>
+        
+        <div class="video-item">
           <div class="video-thumb" data-id="XeSTwjLBc_k">
             <img src="https://img.youtube.com/vi/XeSTwjLBc_k/hqdefault.jpg" alt="Video Thumbnail">
             <button>▶</button>
