--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -234,7 +234,7 @@ header {
     <header><h1>PORTFOLIO ✩♬₊˚.</h1></header>
 
     <div class="section" id="client-work">
-      <h2>client work ✦</h2>
+      <h2>project work ✦</h2>
       <div class="video-container">
 
         <div class="video-item">
