--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -242,7 +242,7 @@ header {
             <img src="https://img.youtube.com/vi/coP5-Fa01Hw/hqdefault.jpg" alt="Video Thumbnail">
             <button></button>
           </div>
-          <p class="video-caption">Crumbs and Traces - Documentary<br>VFX/Intro Card/Motion Graphics (DaVinci Resolve, Nuke, After Effects)</p>
+          <p class="video-caption">Crumbs and Traces - Documentary<br>VFX/Intro Card/Motion Graphics (DaVinci Resolve, Nuke, After Effects)<br>Made alongside <a href="https://www.instagram.com/aden.b3d/" target="_blank">Aden Elmas</a></p>
         </div>
         
         <div class="video-item">
