--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
         <div class="gallery-images">
           <img src="images/delta.png" alt="delta">
           <img src="images/megatron.png" alt="megatron">
+          <img src="images/raynennnn.png" alt="raynen">
         </div>
       </div>
 
