--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>wassim difallah ⋆⭒˚.⋆</title>
+  <title>friendlycritter ⋆⭒˚.⋆</title>
   <link rel="icon" type="image/jpg" href="images/3336a903610f1b29cd14aa89afc0f9cc.jpg">
   <style>
     body {
@@ -270,7 +270,7 @@
 
     <div id="container">
       <header>
-        <h1>WASSIM DIFALLAH ⋆⭒˚.⋆</h1>
+        <h1>FRIENDLY CRITTER ⋆⭒˚.⋆</h1>
       </header>
 
       <div class="section profile-spotlight">
