--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@
         <div class="gallery-images">
           <img src="images/delta.png" alt="delta">
           <img src="images/megatron.png" alt="megatron">
-          <img src="images/raynennnn.png" alt="raynen">
+          <a href="https://open.spotify.com/album/65IWN2rcYoYj9ZF13tt2Kw" target="_blank">
+            <img src="images/raynennnn.png" alt="raynen">
         </div>
       </div>
 
