--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -356,6 +356,10 @@ header {
       <h2>practice ♡</h2>
       <div class="video-container">
         <div class="video-item">
+          <div class ="video-thumb" data-id="GN3ULYfykEA">
+            <img src="https://img.youtube.com/vi/GN3ULYfykEA/hqdefault.jpg" alt="Video Thumbnail"><button></button>
+          </div>
+        <div class="video-item">
           <div class="video-thumb" data-id="W0MfcbnqJ6c">
             <img src="https://img.youtube.com/vi/W0MfcbnqJ6c/hqdefault.jpg" alt="Video Thumbnail"><button></button>
           </div>
