--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -359,6 +359,7 @@ header {
           <div class ="video-thumb" data-id="GN3ULYfykEA">
             <img src="https://img.youtube.com/vi/GN3ULYfykEA/hqdefault.jpg" alt="Video Thumbnail"><button></button>
           </div>
+          <p class="video-caption">Bunii - Selah (Scrap)</p>
         <div class="video-item">
           <div class="video-thumb" data-id="W0MfcbnqJ6c">
             <img src="https://img.youtube.com/vi/W0MfcbnqJ6c/hqdefault.jpg" alt="Video Thumbnail"><button></button>
