--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
       <div class="update-board">
         <h4>Currently Working On:</h4>
-        <p><b>Nov 2025:</b> Cover Art for Kiid Spyro, Cover art for Saturnn, Music Video VFX for Bunii / NX2Photography</p>
+        <p><b>Jan 2026:</b> Short Film for Liam Parry</p>
       </div>
     </nav>
 
