--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
       <div class="update-board">
         <h4>Currently Working On:</h4>
-        <p><b>Jan 2026:</b> Short Film for Liam Parry</p>
+        <p><b>Feb 2026:</b> Music Video for NX2Photography & Overtonight</p>
       </div>
     </nav>
 
