--- a/blogs/index.html
+++ b/blogs/index.html
@@ -217,7 +217,7 @@
 
       <div class="update-board">
         <h4>Currently Working On:</h4>
-        <p><b>Nov 2025:</b> Cover Art for Kiid Spyro, Cover art for Saturnn, Music Video VFX for Bunii / NX2Photography</p>
+        <p><b>Feb 2026:</b> Music Video for NX2Photography/Overtonight</p>
       </div>
     </nav>
     
