--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -228,7 +228,7 @@ header {
 
     <div class="update-board">
       <h4>Currently Working On:</h4>
-      <p><b>Feb 2026:</b> Music Video for NX2Photography/Overtonight</p>
+      <p><b>Feb 2026:</b> Music Video for NX2Photography & Overtonight</p>
     </div>
   </nav>
 
