--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -132,15 +132,16 @@ header {
 
 .video-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 20px;
 }
 
 .video-item {
   display: flex;
   flex-direction: column;
+  min-width: 0;
 }
-
+  
 .video-thumb {
   position: relative;
   cursor: pointer;
