--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -132,7 +132,7 @@ header {
 
 .video-container {
   display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
   gap: 20px;
 }
 
