--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div class="spotlight-section">
           <h2>most recent work :></h2>
           <p>hey please go check this out!</p>
-          <iframe src="https://www.youtube.com/embed/SCnWPXLBtg4?si=hEX8ziKz9PvbW8" title="YouTube video player" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/k-3kn-m7aTc?si=h2gYwVcxNPI47-1x" title="YouTube video player" allowfullscreen></iframe>
         </div>
       </div>
 
