--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -247,6 +247,14 @@ header {
           </div>
           <p class="video-caption">Crumbs and Traces - Documentary<br>VFX/Intro Card/Motion Graphics (DaVinci Resolve, Nuke, After Effects)<br>Made alongside <a href="https://www.instagram.com/aden.b3d/" target="_blank">Aden Elmas</a></p>
         </div>
+
+        <div class="video-item">
+          <div class="video-thumb" data-id="v=k-3kn-m7aTc">
+            <img src="https://img.youtube.com/vi/v=k-3kn-m7aTc/hqdefault.jpg" alt="Video Thumbnail">
+            <button>▶</button>
+          </div>
+          <p class="video-caption">Overtonight - I'm Human 2 [Directed by NX2Photography]<br>VFX/Mixed Media (Photoshop, DaVinci Resolve)</p>
+        </div>
         
         <div class="video-item">
           <div class="video-thumb" data-id="XeSTwjLBc_k">
