--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -249,8 +249,8 @@ header {
         </div>
 
         <div class="video-item">
-          <div class="video-thumb" data-id="v=k-3kn-m7aTc">
-            <img src="https://img.youtube.com/vi/v=k-3kn-m7aTc/hqdefault.jpg" alt="Video Thumbnail">
+          <div class="video-thumb" data-id="k-3kn-m7aTc">
+            <img src="https://img.youtube.com/vi/k-3kn-m7aTc/hqdefault.jpg" alt="Video Thumbnail">
             <button>▶</button>
           </div>
           <p class="video-caption">Overtonight - I'm Human 2 [Directed by NX2Photography]<br>VFX/Mixed Media (Photoshop, DaVinci Resolve)</p>
